--- a/platform.html
+++ b/platform.html
@@ -203,7 +203,7 @@
             <div class="col-md-7 description_tabs-container">
 
                 <ul class="tabs description_tabs">
-                    <li class="tab-link current" id="teachers_tab" data-tab="teachers" content="teachers_image">For PE
+                    <li class="tab-link current" id="teachers_tab" data-tab="teachers" content="teachers_image">PE
                         Teachers
                     </li>
                     <li class="tab-link" id="schools_tab" data-tab="schools" content="schools_image">Schools</li>
@@ -239,6 +239,10 @@
                     • Get the community involved <br>
                     • Develop positive school/parent relationships <br>
                     • Provide engaging and successful environment for pupils, parents and staff
+
+                    <a href="https://app.squadintouch.com/#register">
+                        <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
+                    </a>
                 </div>
 
                 <div id="parents" class="tab-content description_tabs-content">
@@ -268,9 +272,6 @@
                     • Free app to share photos of events
                 </div>
 
-                <a href="https://app.squadintouch.com/#register">
-                    <button class="button--primary description_button">TRY 30 DAYS for FREE</button>
-                </a>
             </div>
             <!--./TABS-->
 
