--- a/platform.html
+++ b/platform.html
@@ -218,11 +218,15 @@
                     </strong>
                     <br>
                     Squad In Touch helps PE teachers: <br>
-                    • Organise fixtures calendar <br>
-                    • Submit games results even from pitches <br>
-                    • Keep track record of pupils performance and discipline up to date <br>
+                    • Organise their fixtures calendar <br>
+                    • Submit games results right from the pitches <br>
+                    • Keep records of pupils performance and discipline up to date <br>
                     • Communicate with parents and pupils <br>
                     • Improve PE practice getting in touch with other PE teachers and our team of Olympians
+
+                    <a href="https://app.squadintouch.com/#register">
+                        <button class="button--primary description_button">Sign up for free</button>
+                    </a>
                 </div>
 
                 <div id="schools" class="tab-content description_tabs-content">
@@ -232,9 +236,9 @@
                     </strong>
                     <br>
                     Squad In Touch helps schools: <br>
-                    • Save money and staff’ time <br>
+                    • Save money and staff time <br>
                     • Increase the number of young people taking part in competitions <br>
-                    • Promote healthy lifestyle among pupils <br>
+                    • Promote healthy lifestyle among your pupils <br>
                     • Broaden participation opportunities <br>
                     • Get the community involved <br>
                     • Develop positive school/parent relationships <br>
@@ -252,11 +256,15 @@
                     </strong>
                     <br>
                     With Squad In Touch parents are provided with: <br>
-                    • 24 Hour access to fixtures calendar, tables and reports <br>
+                    • 24 Hour access to the fixtures calendar, tables and reports <br>
                     • One touch booking for after school clubs <br>
                     • Free app to help support their child and share photos of events <br>
                     • Child’s performance and progress tracking <br>
                     • Tools for communicating with school PE staff and other parents
+
+                    <a href="https://app.squadintouch.com/#register">
+                        <button class="button--primary description_button">Sign up for free</button>
+                    </a>
                 </div>
 
                 <div id="students" class="tab-content description_tabs-content">
@@ -266,10 +274,14 @@
                     </strong>
                     <br>
                     With Squad In Touch students are provided with: <br>
-                    • 24 Hour access to fixtures calendar, tables and reports <br>
-                    • Your performance and progress tracking <br>
+                    • 24 Hour access to the fixtures calendar, tables and reports <br>
+                    • Track your performance and progress <br>
                     • Tools for communicating with school PE staff and other students <br>
-                    • Free app to share photos of events
+                    • Free app to share photos of events <br>
+
+                    <a href="https://app.squadintouch.com/#register">
+                        <button class="button--primary description_button">Sign up for free</button>
+                    </a>
                 </div>
 
             </div>
@@ -315,12 +327,11 @@
                         <div class="text">
                             <h6>Schools and PE teachers web app</h6>
                             <p>
-                                • See your children personalised fixtures calendar <br>
-                                • See games results and match reports in real time <br>
-                                • See your children performance in their favourite sports<br>
-                                • Get notified about last minutes changes<br>
-                                • Send availability reports and replay consent requests anytime, anywhere<br>
-                                • Communicate with school PE staff and other parents
+                                • Manage schools details, school forms, houses and pupils list <br>
+                                • Manage the fixtures calendar, extra-curricular clubs and mini-tournaments <br>
+                                • Input games results, as well as pupil’s individual performance and discipline scores <br>
+                                • Communicate with parents and students sending messages, consent requests and notifications <br>
+                                • Keep your school sports news up to date
                             </p>
                         </div>
                         <div class="img-wrapper">
@@ -331,10 +342,10 @@
                         <div class="text">
                             <h6>Schools public web site and big screen</h6>
                             <p>
-                                • Modern design, photo gallery on the landing page<br>
+                                • Modern design, including a photo gallery on the landing page<br>
                                 • Highlighted events in the focus<br>
                                 • School sport news<br>
-                                • All pupils details are hidden for data privacy<br>
+                                • All pupils details are hidden for data protection<br>
                                 • School fixtures calendar, games results, reports and photos are published
                                 automatically
                             </p>
@@ -346,10 +357,10 @@
                             <h6>Schools PE staff mobile app</h6>
                             <p>
                                 • See your school fixtures calendar<br>
-                                • Input games results and match reports from pitches<br>
-                                • See pupils emergency contacts even when out of the internet connection<br>
+                                • Input games results and match reports from the pitches<br>
+                                • See your pupil’s emergency contact details even when internet connection is unavailable<br>
                                 • Get notified about pupils unavailability to take part<br>
-                                • Send notifications parents and students about last minutes changes
+                                • Send notifications to parents and students about last minutes changes
                             </p>
                         </div>
                         <img src="src/image/how_it_works_3.jpg"/>
@@ -358,12 +369,12 @@
                         <div class="text">
                             <h6>Parents and students mobile app</h6>
                             <p>
-                                • See personalised fixtures calendar<br>
-                                • See games results and match reports in real time<br>
-                                • Track the performance in favourite sports<br>
+                                • See a personalised fixtures calendar<br>
+                                • See game results and match reports in real time<br>
+                                • Track performance in favourite sports<br>
                                 • Get notified about last minutes changes<br>
-                                • Send availability reports and replay consent requests anytime, anywhere<br>
-                                • Communicate with school PE staff and other parents and students
+                                • Send availability reports and respond to consent requests anytime, anywhere<br>
+                                • Communicate with school PE staff as well as other parents and students
                             </p>
                         </div>
                         <img src="src/image/how_it_works_4.jpg"/>
@@ -373,7 +384,7 @@
                             <h6>Tournaments and events web site</h6>
                             <p>
                                 • Well-designed groups results and finals pages<br>
-                                • Games results presented automatically once submitted<br>
+                                • Game results presented automatically once submitted<br>
                                 • Dedicated web-site for each event hosted on Squad In Touch servers for free<br>
                                 • Detailed results for each school which participated<br>
                                 • Printable and email-adjusted PDFs with overall tournament results
@@ -386,7 +397,7 @@
                             <h6>Schools sports partnerships web site</h6>
                             <p>
                                 • Modern design, photo gallery on the landing page<br>
-                                • Seasonal tables are published automatically once games results are submitted<br>
+                                • Seasonal tables are published automatically once game results are submitted<br>
                                 • Highlighted events in the focus<br>
                                 • SSP sport news<br>
                                 • Dedicated web-site for each event hosted on Squad In Touch servers for free
