--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                     </p>
 
                                     <p>
-                                        <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
+                                        <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
                                     </p>
                                 </div>
                             </div>
@@ -910,7 +910,7 @@
                 </p>
 
                 <p>
-                    <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
+                    <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
                 </p>
             </div>
         </div>
