--- a/platform.html
+++ b/platform.html
@@ -112,7 +112,7 @@
                             </p>
 
                             <p>
-                                <strong>Jack Brown</strong> Subject Leader for PE, Sir John Talbot's School
+                                <strong>Jack Brown</strong>, Subject Leader for PE, Sir John Talbot's School
                             </p>
                         </div>
                     </div>
@@ -219,7 +219,7 @@
                     <br>
                     Squad In Touch helps PE teachers: <br>
                     • Organise their fixtures calendar <br>
-                    • Submit games results right from the pitches <br>
+                    • Submit game results right from the pitches <br>
                     • Keep records of pupils performance and discipline up to date <br>
                     • Communicate with parents and pupils <br>
                     • Improve PE practice getting in touch with other PE teachers and our team of Olympians
@@ -329,7 +329,7 @@
                             <p>
                                 • Manage schools details, school forms, houses and pupils list <br>
                                 • Manage the fixtures calendar, extra-curricular clubs and mini-tournaments <br>
-                                • Input games results, as well as pupil’s individual performance and discipline scores <br>
+                                • Input game results, as well as pupil’s individual performance and discipline scores <br>
                                 • Communicate with parents and students sending messages, consent requests and notifications <br>
                                 • Keep your school sports news up to date
                             </p>
@@ -346,7 +346,7 @@
                                 • Highlighted events in the focus<br>
                                 • School sport news<br>
                                 • All pupils details are hidden for data protection<br>
-                                • School fixtures calendar, games results, reports and photos are published
+                                • School fixtures calendar, game results, reports and photos are published
                                 automatically
                             </p>
                         </div>
@@ -357,7 +357,7 @@
                             <h6>Schools PE staff mobile app</h6>
                             <p>
                                 • See your school fixtures calendar<br>
-                                • Input games results and match reports from the pitches<br>
+                                • Input game results and match reports from the pitches<br>
                                 • See your pupil’s emergency contact details even when internet connection is unavailable<br>
                                 • Get notified about pupils unavailability to take part<br>
                                 • Send notifications to parents and students about last minutes changes
