--- a/platform.html
+++ b/platform.html
@@ -46,18 +46,33 @@
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
                                 <ul class="nav navbar-nav">
-                                    <li id="teachers_nav" class="main-menu-item">
-                                        <a class="smooth_scroll" data-tab="teachers" href="#teachers">PE teachers</a>
+
+                                    <li class="main-menu-item">
+                                        <a href="#" data-toggle="dropdown">
+                                            <b class="caret caret_custom"></b>
+                                            How it helps
+                                        </a>
+
+                                        <ul id="helps_for" class="dropdown-menu main-menu-dropdown">
+                                            <li><a href="#how_it_helps" data-tab="teachers" class="smooth_scroll main-menu-dropdown-item">Teachers</a></li>
+                                            <li><a href="#how_it_helps" data-tab="schools" class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
+                                            <li><a href="#how_it_helps" data-tab="parents" class="smooth_scroll main-menu-dropdown-item">Parents</a></li>
+                                            <li><a href="#how_it_helps" data-tab="students" class="smooth_scroll main-menu-dropdown-item">Students</a></li>
+                                        </ul>
                                     </li>
-                                    <li id="schools_nav" class="main-menu-item">
-                                        <a class="smooth_scroll" data-tab="schools" href="#schools">Schools</a>
-                                    </li>
-                                    <li id="parents_nav" class="main-menu-item">
-                                        <a class="smooth_scroll" data-tab="parents" href="#parents">Parents</a>
-                                    </li>
-                                    <li id="students_nav" class="main-menu-item">
-                                        <a class="smooth_scroll" data-tab="students" href="#students">Students</a>
-                                    </li>
+
+                                    <!--<li id="teachers_nav" class="main-menu-item">-->
+                                        <!--<a class="smooth_scroll" data-tab="teachers" href="#teachers">PE teachers</a>-->
+                                    <!--</li>-->
+                                    <!--<li id="schools_nav" class="main-menu-item">-->
+                                        <!--<a class="smooth_scroll" data-tab="schools" href="#schools">Schools</a>-->
+                                    <!--</li>-->
+                                    <!--<li id="parents_nav" class="main-menu-item">-->
+                                        <!--<a class="smooth_scroll" data-tab="parents" href="#parents">Parents</a>-->
+                                    <!--</li>-->
+                                    <!--<li id="students_nav" class="main-menu-item">-->
+                                        <!--<a class="smooth_scroll" data-tab="students" href="#students">Students</a>-->
+                                    <!--</li>-->
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#how_it_works">How it
                                         works</a></li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
@@ -193,14 +208,16 @@
 <!--./HEADER-->
 
 
-<!--DESCRIPTION SECTION-->
-<section id="description" class="description_section">
+<!--HOW IT HELPS SECTION-->
+<section id="how_it_helps" class="description_section">
 
     <div class="container">
         <div class="row">
 
             <!--TABS-->
             <div class="col-md-7 description_tabs-container">
+
+                <h2>How it helps</h2>
 
                 <ul class="tabs description_tabs">
                     <li class="tab-link current" id="teachers_tab" data-tab="teachers" content="teachers_image">PE
@@ -301,7 +318,7 @@
 
 
 </section>
-<!--./DESCRIPTION SECTION-->
+<!--./HOW IT HELPS SECTION-->
 
 
 <!--HOW IT WORKS SECTION-->
@@ -329,8 +346,10 @@
                             <p>
                                 • Manage schools details, school forms, houses and pupils list <br>
                                 • Manage the fixtures calendar, extra-curricular clubs and mini-tournaments <br>
-                                • Input game results, as well as pupil’s individual performance and discipline scores <br>
-                                • Communicate with parents and students sending messages, consent requests and notifications <br>
+                                • Input game results, as well as pupil’s individual performance and discipline scores
+                                <br>
+                                • Communicate with parents and students sending messages, consent requests and
+                                notifications <br>
                                 • Keep your school sports news up to date
                             </p>
                         </div>
@@ -358,7 +377,8 @@
                             <p>
                                 • See your school fixtures calendar<br>
                                 • Input game results and match reports from the pitches<br>
-                                • See your pupil’s emergency contact details even when internet connection is unavailable<br>
+                                • See your pupil’s emergency contact details even when internet connection is
+                                unavailable<br>
                                 • Get notified about pupils unavailability to take part<br>
                                 • Send notifications to parents and students about last minutes changes
                             </p>
@@ -719,7 +739,8 @@
                 <!-- Основное содержимое модального окна -->
                 <div class="testimonials-title sportsmens_title">
                     <h4>Sir John Talbot's School</h4></div>
-                <div class="sportsmens_modal-biography">"Squad In Touch provides everything we need to organise school teams and clubs easily.
+                <div class="sportsmens_modal-biography">"Squad In Touch provides everything we need to organise school
+                    teams and clubs easily.
                     Anything that is not a feature can be sorted out effectively and the support we have
                     been
                     given setting this up has been great...
