--- a/platform.html
+++ b/platform.html
@@ -54,27 +54,72 @@
                                         </a>
 
                                         <ul id="helps_for" class="dropdown-menu main-menu-dropdown">
-                                            <li><a href="#how_it_helps" data-tab="teachers" class="smooth_scroll main-menu-dropdown-item">Teachers</a></li>
-                                            <li><a href="#how_it_helps" data-tab="schools" class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
-                                            <li><a href="#how_it_helps" data-tab="parents" class="smooth_scroll main-menu-dropdown-item">Parents</a></li>
-                                            <li><a href="#how_it_helps" data-tab="students" class="smooth_scroll main-menu-dropdown-item">Students</a></li>
+                                            <li><a href="#how_it_helps" data-tab="teachers" data-type="helps"
+                                                   class="smooth_scroll main-menu-dropdown-item">Teachers</a></li>
+                                            <li><a href="#how_it_helps" data-tab="schools" data-type="helps"
+                                                   class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
+                                            <li><a href="#how_it_helps" data-tab="parents" data-type="helps"
+                                                   class="smooth_scroll main-menu-dropdown-item">Parents</a></li>
+                                            <li><a href="#how_it_helps" data-tab="students" data-type="helps"
+                                                   class="smooth_scroll main-menu-dropdown-item">Students</a></li>
                                         </ul>
                                     </li>
 
                                     <!--<li id="teachers_nav" class="main-menu-item">-->
-                                        <!--<a class="smooth_scroll" data-tab="teachers" href="#teachers">PE teachers</a>-->
+                                    <!--<a class="smooth_scroll" data-tab="teachers" href="#teachers">PE teachers</a>-->
                                     <!--</li>-->
                                     <!--<li id="schools_nav" class="main-menu-item">-->
-                                        <!--<a class="smooth_scroll" data-tab="schools" href="#schools">Schools</a>-->
+                                    <!--<a class="smooth_scroll" data-tab="schools" href="#schools">Schools</a>-->
                                     <!--</li>-->
                                     <!--<li id="parents_nav" class="main-menu-item">-->
-                                        <!--<a class="smooth_scroll" data-tab="parents" href="#parents">Parents</a>-->
+                                    <!--<a class="smooth_scroll" data-tab="parents" href="#parents">Parents</a>-->
                                     <!--</li>-->
                                     <!--<li id="students_nav" class="main-menu-item">-->
-                                        <!--<a class="smooth_scroll" data-tab="students" href="#students">Students</a>-->
+                                    <!--<a class="smooth_scroll" data-tab="students" href="#students">Students</a>-->
                                     <!--</li>-->
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#how_it_works">How it
-                                        works</a></li>
+
+                                    <li class="main-menu-item">
+                                        <a href="#" data-toggle="dropdown">
+                                            <b class="caret caret_custom"></b>
+                                            How it works
+                                        </a>
+
+                                        <ul class="dropdown-menu main-menu-dropdown">
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-1"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Schools and PE teachers web app</a>
+                                            </li>
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-2"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Schools public web site and big screen</a>
+                                            </li>
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-3"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Schools PE staff mobile app</a>
+                                            </li>
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-4"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Parents and students mobile app</a>
+                                            </li>
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-5"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Tournaments and events web site</a>
+                                            </li>
+                                            <li>
+                                                <a href="#how_it_works" data-tab="tab-6"
+                                                   class="smooth_scroll main-menu-dropdown-item">
+                                                    Schools sports partnerships web site</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+
+                                    <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
+                                    </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
                                     <li class="main-menu-item active"><a href="https://app.squadintouch.com">Join for
                                         free</a>
@@ -329,12 +374,12 @@
                 <h2>How it works</h2>
 
                 <ul class="vertical_tabs">
-                    <li class="tab-link current" data-tab="tab-1">Schools and PE teachers web app</li>
-                    <li class="tab-link" data-tab="tab-2">Schools public web site and big screen</li>
-                    <li class="tab-link" data-tab="tab-3">Schools PE staff mobile app</li>
-                    <li class="tab-link" data-tab="tab-4">Parents and students mobile app</li>
-                    <li class="tab-link" data-tab="tab-5">Tournaments and events web site</li>
-                    <li class="tab-link" data-tab="tab-6">Schools sports partnerships web site</li>
+                    <li class="tab-link current" id="v-tab-1" data-tab="tab-1">Schools and PE teachers web app</li>
+                    <li class="tab-link" id="v-tab-2" data-tab="tab-2">Schools public web site and big screen</li>
+                    <li class="tab-link" id="v-tab-3" data-tab="tab-3">Schools PE staff mobile app</li>
+                    <li class="tab-link" id="v-tab-4" data-tab="tab-4">Parents and students mobile app</li>
+                    <li class="tab-link" id="v-tab-5" data-tab="tab-5">Tournaments and events web site</li>
+                    <li class="tab-link" id="v-tab-6" data-tab="tab-6">Schools sports partnerships web site</li>
                 </ul>
             </div>
 
