--- a/platform.html
+++ b/platform.html
@@ -55,7 +55,7 @@
 
                                         <ul id="helps_for" class="dropdown-menu main-menu-dropdown">
                                             <li><a href="#how_it_helps" data-tab="teachers" data-type="helps"
-                                                   class="smooth_scroll main-menu-dropdown-item">Teachers</a></li>
+                                                   class="smooth_scroll main-menu-dropdown-item">PE Teachers</a></li>
                                             <li><a href="#how_it_helps" data-tab="schools" data-type="helps"
                                                    class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
                                             <li><a href="#how_it_helps" data-tab="parents" data-type="helps"
@@ -121,8 +121,7 @@
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
                                     </li>
                                     <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com">Join for
-                                        free</a>
+                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com">Sign up / Sign in</a>
                                     </li>
                                 </ul>
                             </div>
