Remove not used code

--- a/platform.html
+++ b/platform.html
@@ -713,8 +713,8 @@
 <!--MODAL WINDOWS-->
 <!-- Модальное оно Host Event -->
 
-<div id="host_event" class="modal fade">
-    <div class="modal-center" data-dismiss="modal">
+<div id="host_event" class="modal fade" role="dialog">
+    <div class="modal-center">
         <div class="modal-dialog modal-width">
             <div class="modal-content ">
                 <!-- Заголовок модального окна -->
