--- a/platform.html
+++ b/platform.html
@@ -741,9 +741,9 @@
                             </div>
                             <div class="form-group modal-hod">
                                 <div class="form-group">
-                                    <label for="additional_notes" class="h4 ">Additional notes
+                                    <label for="notes" class="h4 ">Additional notes
                                         (optional)</label>
-                                    <textarea id="additional_notes" class="form-control olympian_form-height" rows="5"
+                                    <textarea id="notes" class="form-control olympian_form-height" rows="5"
                                               placeholder="Enter your message"
                                               required></textarea>
                                 </div>
