--- a/index.html
+++ b/index.html
@@ -1233,6 +1233,24 @@
     </div>
 </div>
 
+<!--MODAL SUCCESS-->
+<!-- Modal -->
+<div class="modal fade" id="email_has_been_send" role="dialog">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p>Email has been successfully sent</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--./MODAL WINDOWS-->
 
 <script src="dist/app.js" type="text/javascript"></script>
 </body>
