Schools and parents images has been changed

--- a/platform.html
+++ b/platform.html
@@ -352,10 +352,9 @@
             <div class="col-sm-5 col-md-5 description_image hidden-xs">
                 <!--TAB IMAGES-->
                 <img id="teachers_image" class="tab-image current" src="src/image/teacher.png"/>
-                <img id="schools_image" class="tab-image" src="src/image/slide2_devices.png"/>
-                <img id="parents_image" class="tab-image" src="src/image/parents.jpg"/>
+                <img id="schools_image" class="tab-image" src="src/image/HH_Schools.png"/>
+                <img id="parents_image" class="tab-image" src="src/image/HH_Parents.png"/>
                 <img id="students_image" class="tab-image" src="src/image/students.jpg"/>
-
             </div>
 
         </div>
