Changed students image

--- a/platform.html
+++ b/platform.html
@@ -354,7 +354,7 @@
                 <img id="teachers_image" class="tab-image current" src="src/image/teacher.png"/>
                 <img id="schools_image" class="tab-image" src="src/image/HH_Schools.png"/>
                 <img id="parents_image" class="tab-image" src="src/image/HH_Parents.png"/>
-                <img id="students_image" class="tab-image" src="src/image/students.jpg"/>
+                <img id="students_image" class="tab-image" src="src/image/HH_Students.png"/>
             </div>
 
         </div>
