--- a/platform.html
+++ b/platform.html
@@ -398,7 +398,7 @@
                             </p>
                         </div>
                         <div class="img-wrapper">
-                            <img src="src/image/slide2_devices.png"/>
+                            <img src="src/image/HW_01_Schools_web.png"/>
                         </div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
@@ -413,7 +413,7 @@
                                 automatically
                             </p>
                         </div>
-                        <img src="src/image/how_it_works_2.jpg"/>
+                        <img src="src/image/HW_02_Schools_public_web.png"/>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
                         <div class="text">
@@ -427,7 +427,7 @@
                                 • Send notifications to parents and students about last minutes changes
                             </p>
                         </div>
-                        <img src="src/image/how_it_works_3.jpg"/>
+                        <img src="src/image/HW_03_Schools_mobile.png"/>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
                         <div class="text">
@@ -441,7 +441,7 @@
                                 • Communicate with school PE staff as well as other parents and students
                             </p>
                         </div>
-                        <img src="src/image/how_it_works_4.jpg"/>
+                        <img src="src/image/HW_04_Parents_mobile.png"/>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
                         <div class="text">
@@ -454,7 +454,7 @@
                                 • Printable and email-adjusted PDFs with overall tournament results
                             </p>
                         </div>
-                        <img src="src/image/how_it_works_5.jpg"/>
+                        <img src="src/image/HW_05_Tournaments.png"/>
                     </div>
                     <div id="tab-6" class="vertical_tab-content">
                         <div class="text">
@@ -467,7 +467,7 @@
                                 • Dedicated web-site for each event hosted on Squad In Touch servers for free
                             </p>
                         </div>
-                        <img src="src/image/how_it_works_6.jpg">
+                        <img src="src/image/HW_06_SSP.png">
                     </div>
                 </div>
             </div>
